# bc-translations

./: .gitignore  AGENTS.md  FLUENCY_NEEDED.md  LOG.md  README.md
python/bc-components/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/bc-components/src/bc_components/: __init__.py  _compressed.py  _digest.py  _digest_provider.py  _encrypter.py  _error.py  _hkdf_rng.py  _json.py  _keypair.py  _nonce.py  _pq_utils.py  _private_key_base.py  _private_key_data_provider.py  _private_keys.py  _public_keys.py  _reference.py  _salt.py  _seed.py  _sskr_mod.py  _tags_registry.py
python/bc-components/src/bc_components/ec_key/: __init__.py  _ec_key_base.py  (+5 more)
python/bc-components/tests/: test_compressed.py  test_digest.py  test_ec_key.py  test_ed25519.py  test_encapsulation.py  test_encrypted_key.py  test_hkdf_rng.py  test_id_xid.py  test_integration.py  test_json.py  test_mldsa.py  test_mlkem.py  test_nonce.py  test_sealed_message.py  test_seed.py  test_signing.py  test_sskr.py  test_symmetric.py  test_x25519.py
python/bc-crypto/: .gitignore  LOG.md  MANIFEST.md  pyproject.toml
python/bc-crypto/src/bc_crypto/: __init__.py  argon.py  ecdsa_keys.py  ecdsa_signing.py  ed25519_signing.py  error.py  hash.py  memzero.py  public_key_encryption.py  schnorr_signing.py  scrypt.py  symmetric_encryption.py
python/bc-crypto/tests/: conftest.py  test_argon.py  test_ecdsa_keys.py  test_ecdsa_signing.py  test_ed25519_signing.py  test_hash.py  test_package_metadata.py  test_public_key_encryption.py  test_schnorr_signing.py  test_scrypt.py  test_symmetric_encryption.py
python/bc-envelope/: COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/bc-envelope/src/bc_envelope/: __init__.py  _assertion.py  _assertions.py  _attachment.py  _cbor.py  _compress.py  _diagnostic.py  _digest_ops.py  _edge.py  _elide.py  _encrypt.py  _envelope.py  _envelope_case.py  _envelope_encodable.py  _envelope_summary.py  _error.py  _event.py  _expression.py  _format_context.py  _function.py  _functions.py  _hex_format.py  _leaf.py  _mermaid.py  _notation.py  _parameter.py  _parameters.py  _proof.py  _queries.py  _recipient.py  _request.py  _response.py  _salt.py  _seal.py  _secret.py  _signature.py  _signature_metadata.py  _sskr.py  _string_utils.py  _tree_format.py  (+3 more)
python/bc-envelope/tests/: conftest.py  test_attachment.py  test_compression.py  test_core.py  test_core_encoding.py  test_core_nesting.py  test_crypto.py  test_ed25519.py  test_edge.py  test_elision.py  test_encapsulation.py  test_encrypted.py  test_event.py  test_expression.py  test_format.py  test_keypair_signing.py  test_multi_permit.py  test_non_correlation.py  test_obscuring.py  test_proof.py  test_request.py  test_response.py  test_seal.py  test_signature.py  test_ssh.py  test_sskr.py  test_type.py
python/bc-envelope/tests/common/: check_encoding.py  test_data.py  test_seed.py
python/bc-lifehash/: .gitignore  LOG.md  MANIFEST.md  pyproject.toml
python/bc-lifehash/src/bc_lifehash/: __init__.py  _bit_enumerator.py  _cell_grid.py  _change_grid.py  _color.py  _color_func.py  _color_grid.py  _frac_grid.py  _gradients.py  _grid.py  _hsb_color.py  _lifehash.py  _patterns.py
python/bc-lifehash/tests/: test_generate_pngs.py  test_vectors.py
python/bc-rand/: LOG.md  MANIFEST.md  pyproject.toml
python/bc-rand/src/bc_rand/: __init__.py  _constants.py  _xoshiro256starstar.py  random_number_generator.py  secure_random.py  seeded_random.py
python/bc-rand/tests/: conftest.py  test_random_number_generator.py  test_secure_random.py  test_seeded_random.py
python/bc-shamir/: .gitignore  LOG.md  MANIFEST.md  pyproject.toml
python/bc-shamir/src/bc_shamir/: __init__.py  constants.py  error.py  hazmat.py  interpolate.py  shamir.py
python/bc-shamir/tests/: conftest.py  test_package_metadata.py  test_shamir_examples.py  test_shamir_vectors.py
python/bc-tags/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/bc-tags/src/bc_tags/: __init__.py  tags_registry.py
python/bc-tags/tests/: test_tags_registry.py
python/bc-ur/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/bc-ur/src/bc_ur/: __init__.py  _bytewords_constants.py  _crc32.py  _fountain_decoder.py  _fountain_encoder.py  _fountain_part.py  _fountain_utils.py  _ur_encoding.py  _weighted_sampler.py  _xoshiro256.py  bytewords.py  codable.py  error.py  multipart_decoder.py  multipart_encoder.py  ur.py  ur_type.py
python/bc-ur/tests/: conftest.py  test_bytewords.py  test_crc32.py  test_examples.py  test_fountain.py  test_ur.py  test_ur_codable.py  test_weighted_sampler.py  test_xoshiro256.py
python/dcbor/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/dcbor/src/dcbor/: __init__.py  byte_string.py  cbor.py  date.py  decode.py  diag.py  dump.py  error.py  float_utils.py  map.py  set.py  simple.py  string_util.py  tag.py  tags_store.py  traits.py  varint.py  walk.py
python/dcbor/tests/: test_encode.py  test_format.py  test_walk.py
python/known-values/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/known-values/src/known_values/: __init__.py  _directory_loader.py  _known_value.py  _known_value_store.py  _known_values_registry.py
python/known-values/tests/: __init__.py  conftest.py  test_directory_loader.py  test_known_value.py  test_known_values_registry.py
python/provenance-mark/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/provenance-mark/src/provenance_mark/: __init__.py  _crypto_utils.py  _date.py  _error.py  _generator.py  _mark.py  _mark_info.py  _resolution.py  _rng_state.py  _seed.py  _util.py  _validate.py  _xoshiro256starstar.py
python/provenance-mark/tests/: conftest.py  test_crypto_utils.py  test_date.py  test_identifier.py  test_mark.py  test_util.py  test_validate.py  test_xoshiro256starstar.py
python/sskr/: .gitignore  COMPLETENESS.md  LOG.md  MANIFEST.md  pyproject.toml
python/sskr/src/sskr/: __init__.py  constants.py  encoding.py  error.py  secret.py  share.py  spec.py
python/sskr/tests/: test_sskr.py
(+1830 files in other folders)
