[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bc-components"
version = "0.31.1"
description = "Secure Components for Python."
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["cryptography", "blockchain", "bitcoin"]
dependencies = [
  "bc-rand==0.5.0",
  "bc-crypto==0.14.0",
  "dcbor==0.25.1",
  "bc-tags==0.12.0",
  "bc-ur==0.19.0",
  "sskr==0.12.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bc_components"]
