[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bc-rand"
version = "0.5.0"
description = "Blockchain Commons Random Number Utilities"
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["random", "testing", "security"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bc_rand"]
