[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bc-shamir"
version = "0.13.0"
description = "Shamir's Secret Sharing (SSS) for Blockchain Commons projects."
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["cryptography", "shamir", "secret-sharing", "blockchain"]
dependencies = [
  "bc-rand==0.5.0",
  "bc-crypto==0.14.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bc_shamir"]
