[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bc-tags"
version = "0.12.0"
description = "Blockchain Commons CBOR Tags."
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["cbor", "tags", "blockchain", "encoding"]
dependencies = [
  "dcbor==0.25.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bc_tags"]
