[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bc-ur"
version = "0.19.0"
description = "Uniform Resources (UR) for Python."
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["ur", "uniform-resource", "cbor", "encoding", "qr"]
dependencies = ["dcbor>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bc_ur"]
