[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcbor"
version = "0.25.1"
description = "Deterministic CBOR (dCBOR) for Python."
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["cbor", "dcbor", "deterministic", "encoding"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/dcbor"]
