[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-mark"
version = "0.24.0"
description = "A cryptographically-secured system for establishing and verifying the authenticity of works"
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
dependencies = [
    "bc-rand",
    "dcbor",
    "bc-ur",
    "bc-tags",
    "bc-envelope",
]

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_mark"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
