[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sskr"
version = "0.12.0"
description = "Sharded Secret Key Reconstruction (SSKR) for Python."
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
keywords = ["cryptography", "secret-sharing", "sskr", "shamir"]
dependencies = [
  "bc-rand==0.5.0",
  "bc-shamir==0.13.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/sskr"]
